--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ TEST/2018-09-22-Re-Train.csv
 TEST/2018-10-06-Re-Train.csv
 TEST/2018-10-20-Re-Train.csv
 TEST/2018-10-21-Re-Train.csv
+TEST/2018-11-04-Re-Train.csv
+TEST/2018-11-17-Re-Train.csv
+TEST/2018-11-18-Re-Train.csv
+TEST/2018-11-25-Re-Train.csv
+TEST/2018-12-01-Re-Train.csv
